--- a/css/canary-style.css
+++ b/css/canary-style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 body {
     background-color: rgb(25, 25, 25);
     color: rgb(240, 240, 240);
