--- a/css/canary-style.css
+++ b/css/canary-style.css
@@ -3,8 +3,8 @@ body {
     color: rgb(240, 240, 240);
     font-family: "Inter", sans-serif;
 
-    padding-top: 1em;
-    padding-bottom:1em;
+    padding-top: 2em;
+    padding-bottom:2em;
     padding-right: 4em;
     padding-left: 4em;
 }
@@ -45,9 +45,20 @@ br {
     user-select: none;
 }
 
+code {
+    border-radius: 0.35em;
+    user-select: all;
+
+    color: rgb(240, 240, 240);
+    background-color: rgb(47, 47, 47);
+
+    padding: 0.3em
+}
+
 button, input.button {
     font-family: "Inter", sans-serif;
     font-size: 1em;
+
     outline: none;
     border: none;
     border-radius: 0.35em;
@@ -60,12 +71,12 @@ button, input.button {
     cursor: pointer;
 }
 
-button.light, input.button.light, div.light, textarea.light { 
+button.light, input.button.light, div.light, textarea.light, code.light { 
     color: rgb(25, 25, 25);
     background-color: rgb(222, 222, 222);
 }
 
-button.dark, input.button.dark, div.dark, textarea.dark {
+button.dark, input.button.dark, div.dark, textarea.dark, code.dark {
     color: rgb(240, 240, 240);
     background-color: rgb(47, 47, 47);
 }
@@ -140,10 +151,7 @@ textarea {
     outline: none;
     border-radius: 0.35em;
 
-    padding-top: 0.5em;
-    padding-bottom:0.5em;
-    padding-right: 0.5em;
-    padding-left: 0.5em;
+    padding: 0.5em;
 
     cursor: text;
 }
