--- a/css/canary-style.css
+++ b/css/canary-style.css
@@ -1,12 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 body {
     background-color: rgb(25, 25, 25);
     color: rgb(240, 240, 240);
     font-family: "Inter", sans-serif;
+}
 
-    padding-top: 1em;
-    padding-bottom:1em;
-    padding-right: 4em;
-    padding-left: 4em;
+body.padded {
+    margin-top: 0em;
+    padding: 4em;
+}
+
+body.text-padded {
+    margin-top: 0em;
+    padding: 4em;
+    padding-top: 2em;
 }
 
 body.dark {
@@ -15,34 +23,38 @@ body.dark {
 }
 
 body.light {
-    background-color: rgb(240,240,240);
+    background-color: rgb(240, 240, 240);
     color: rgb(25, 25, 25);
 }
 
-p.title, label.title {
+p.title,
+label.title {
     font-size: 2.1875em;
 }
 
-p.description, label.description {
+p.description,
+label.description {
     color: rgb(104, 104, 104);
     font-size: 1em;
 }
 
-p.heading, label.heading {
-font-size: 1.5em
+p.heading,
+label.heading {
+    font-size: 1.5em
 }
 
 ::selection {
-            color: black;
-            background-color: rgb(128, 159, 218);
+    color: black;
+    background-color: rgb(128, 159, 218);
 }
 
-p, label {
+p,
+label {
     font-size: 1em;
 }
 
 a {
-	color: rgb(240, 240, 240);
+    color: rgb(240, 240, 240);
     font-size: 1em;
 }
 
@@ -51,16 +63,14 @@ br {
 }
 
 code {
-    border-radius: 0.35em;
     user-select: all;
 
     color: rgb(240, 240, 240);
     background-color: rgb(47, 47, 47);
-
-    padding: 0.3em
 }
 
-button, input.button {
+button,
+input.button {
     font-family: "Inter", sans-serif;
     font-size: 1em;
 
@@ -69,19 +79,30 @@ button, input.button {
     border-radius: 0.35em;
 
     padding-top: 0.5em;
-    padding-bottom:0.5em;
+    padding-bottom: 0.5em;
     padding-right: 0.75em;
     padding-left: 0.75em;
-    
-    cursor: pointer;
-}
 
-button.light, input.button.light, div.light, textarea.light, code.light { 
+    cursor: pointer;
+
     color: rgb(25, 25, 25);
     background-color: rgb(222, 222, 222);
 }
 
-button.dark, input.button.dark, div.dark, textarea.dark, code.dark {
+button.light,
+input.button.light,
+div.light,
+textarea.light,
+code.light {
+    color: rgb(25, 25, 25);
+    background-color: rgb(222, 222, 222);
+}
+
+button.dark,
+input.button.dark,
+div.dark,
+textarea.dark,
+code.dark {
     color: rgb(240, 240, 240);
     background-color: rgb(47, 47, 47);
 }
@@ -94,28 +115,30 @@ button.dark, input.button.dark, div.dark, textarea.dark, code.dark {
     border-color: rgb(47, 47, 47);
 }
 
-.bold {
-	font-weight: bold;
+.font-bold,
+.bold,
+b {
+    font-weight: bold;
 }
 
-.light {
+.font-light {
     font-weight: lighter;
 }
 
-.regular {
+.font-regular {
     font-weight: normal;
 }
 
-.black {
+.font-black {
     font-weight: bolder;
 }
 
 .auto-select {
-	user-select: auto;
+    user-select: auto;
 }
 
 .no-select {
-	user-select: none;
+    user-select: none;
 }
 
 .no-cursor {
@@ -123,7 +146,7 @@ button.dark, input.button.dark, div.dark, textarea.dark, code.dark {
 }
 
 .no-decor {
-	text-decoration: none;
+    text-decoration: none;
 }
 
 .italic {
@@ -135,7 +158,7 @@ button.dark, input.button.dark, div.dark, textarea.dark, code.dark {
 }
 
 .text {
-	cursor: text;
+    cursor: text;
 }
 
 .border {
@@ -143,7 +166,9 @@ button.dark, input.button.dark, div.dark, textarea.dark, code.dark {
     border-radius: 0.35em;
 }
 
-img {
+img,
+iframe,
+video {
     outline: none;
     border: none;
     border-radius: 0.35em;
@@ -165,9 +190,29 @@ div {
     border: none;
     outline: none;
     border-radius: 0.35em;
+    
+    color: rgb(240, 240, 240);
+    background-color: rgb(47, 47, 47);
+}
 
+div.padded {
+    padding: 1.5em;
+}
+
+div.text-padded {
     padding-top: 0.25em;
-    padding-bottom:0.25em;
-    padding-right: 1.25em;
-    padding-left: 1.25em;
+    padding-bottom: 1.5em;
+    padding-right: 1.5em;
+    padding-left: 1.5em;
+}
+
+table,
+th,
+td {
+    padding: 0.5em;
+    border-style: solid;
+    border-width: 0.1em;
+    border-collapse: collapse;
+    color: rgb(240, 240, 240);
+    background-color: rgb(47, 47, 47)
 }
