--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 body {
-    background-color: rgb(27, 27, 27);
+    background-image: url('/assets/bg.webp');
+    background-size: cover;
     margin: 3em;
     line-height: 150%;
+    user-select: none;
 }
 
 h1,
@@ -13,10 +15,14 @@ li,
 p {
     color: white;
     font-family: "Inter", sans-serif;
-    user-select: none;
+}
+
+a:hover {
+    color: white;
 }
 
 a {
+    transition: color 0.25s;
     color: rgb(123, 196, 255);
 }
 
@@ -42,7 +48,11 @@ hr {
 }
 
 .icon {
-    color: white;
-    user-select: none;
+    transition: color 0.25s;
+    color: rgb(123, 196, 255);
     padding-right: 4px;
+}
+
+.icon:hover {
+    color: white;
 }
